esercizio5HW
tutto funziona