@@ -2,32 +2,34 @@ package it.uniroma3.diadia.comandi;
 
 import java.util.Scanner;
 
-import it.uniroma3.diadia.IO;
-
 public class FabbricaDiComandiRiflessiva implements FabbricaDiComandi {
-	private IO io ;
+	//private IO io ;
 
-	@SuppressWarnings("deprecation")
 	@Override
-	public Comando costruisciComando(String istruzione) {
+	public AbstractComando costruisciComando(String istruzione) {
 		Scanner scannerDiParole = new Scanner(istruzione);
 		String nomeComando = null;
 		String parametro = null;
-		Comando comando = null;
+		AbstractComando comando = null;
 		if (scannerDiParole.hasNext())
 			nomeComando = scannerDiParole.next();//prima parola: nome del comando
 		if (scannerDiParole.hasNext())
 			parametro = scannerDiParole.next();//seconda parola: eventuale parametro
-		
-		StringBuilder nomeClasse = new StringBuilder("it.uniroma3.diadia.comandi.Comando");
-		nomeClasse.append(Character.toUpperCase(nomeComando.charAt(0)));
-		nomeClasse.append(nomeComando.substring(1));
-		try {
-			comando =(Comando) Class.forName(nomeClasse.toString()).newInstance();
-		} catch (Exception e) {
+
+
+		if(nomeComando != null) {    // ho messo quest' if per risolvere il problema "INVIO", non va bene, dovrebbe far parte di un'eccezione!!!!!!!!!!!
+			StringBuilder nomeClasse = new StringBuilder("it.uniroma3.diadia.comandi.Comando");
+			nomeClasse.append(Character.toUpperCase(nomeComando.charAt(0)));
+			nomeClasse.append(nomeComando.substring(1));
+			try {
+				comando =(AbstractComando) Class.forName(nomeClasse.toString()).getConstructor().newInstance();
+			} catch (Exception e) {
+				comando = new ComandoNonValido();
+			}
+			comando.setParametro(parametro);
+		}else {
 			comando = new ComandoNonValido();
 		}
-		comando.setParametro(parametro);
 		return comando;
 	}
 }
